--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "node --watch src/index.js",
+    "server": "node src/index.js",
     "migration:generate": "drizzle-kit generate:pg",
     "migration:push": "drizzle-kit push:pg"
   },
@@ -13,11 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
-    "drizzle-orm": "^0.30.1",
+    "drizzle-orm": "^0.30.10",
     "express": "^4.18.2",
-    "pg": "^8.11.3"
+    "pg": "^8.14.1"
   },
   "devDependencies": {
-    "drizzle-kit": "^0.20.14"
+    "drizzle-kit": "^0.20.18"
   }
 }
