--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "node src/index.js",
+    "server": "node --watch src/index.js",
     "migration:generate": "drizzle-kit generate:pg",
     "migration:push": "drizzle-kit push:pg"
   },
   "author": "maksym bychok",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "body-parser": "^1.20.3",
     "drizzle-orm": "^0.30.10",
     "express": "^4.18.2",
     "pg": "^8.14.1"
